[setup] - example of section 1 and NavBar

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,6 @@ $isabeline:#ede9e3;
 $almond:#e7d7c9;
 $paleDogwood:#d4b2a7;
 $silver:#cdc6c3;
-$Cinereous:#a38f85;
+$cinereous:#a38f85;
 $dark:#212121;
 $light:#fff;
