--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,17 +1,4 @@
 @import "variables";
-
-.textBeautyDream{
-  color: $paleDogwood;
-  font-family: "beautyDream";
-  font-size: 30px;
-}
-.textLovelo{
-  color: $isabeline;
-  font-family: "loveloBlack";
-  font-size: 30px;
-}
-.textDosis{
-  color: $Cinereous;
-  font-family: "dosisRegular";
-  font-size: 30px;
-}
+@import "navBar";
+@import "structure";
+@import "section1";
