--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
   padding: 0px;
   box-sizing: border-box; }
 
-html p {
+html p, html h1, html h2, html h3 {
   margin: 0; }
 
 .section1Container .imageTitleContainer {
@@ -86,3 +86,92 @@ html p {
   .section1Container .homeDescriptionContainer .homeDescriptionText {
     font-family: "dosisRegular";
     padding-bottom: 20px; }
+
+.section2Container {
+  padding: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+  background-color: #ede9e3; }
+  .section2Container .section2TitleContainer {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px; }
+    .section2Container .section2TitleContainer .section2Title {
+      font-family: "beautyDream";
+      font-size: 40px; }
+  .section2Container .section2DescriptionItemsContainer {
+    display: flex;
+    justify-content: space-evenly; }
+    .section2Container .section2DescriptionItemsContainer .section2DescriptionContainer {
+      width: 35%; }
+      .section2Container .section2DescriptionItemsContainer .section2DescriptionContainer .section2ItemContainer {
+        display: flex;
+        margin-bottom: 20px;
+        align-items: center; }
+        .section2Container .section2DescriptionItemsContainer .section2DescriptionContainer .section2ItemContainer .section2Item {
+          font-size: 100px; }
+        .section2Container .section2DescriptionItemsContainer .section2DescriptionContainer .section2ItemContainer .section2Text {
+          margin-left: 20px;
+          font-family: "dosisRegular"; }
+
+.section3Container {
+  padding: 30px 50px 70px 50px; }
+  .section3Container .section3TitleContainer {
+    margin: 40px 100px 60px 100px; }
+    .section3Container .section3TitleContainer .section3Title {
+      font-family: "loveloBlack";
+      font-size: 18px;
+      text-align: center;
+      margin-bottom: 15px; }
+    .section3Container .section3TitleContainer .section3SubTitle {
+      font-family: "dosisRegular";
+      font-size: 16px; }
+  .section3Container .section3OptionsContainer {
+    display: flex;
+    justify-content: space-evenly; }
+    .section3Container .section3OptionsContainer .section3OptionContainer {
+      padding: 70px 100px;
+      background-color: #d4b2a7;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .section3Container .section3OptionsContainer .section3OptionContainer .section3OptionTitle {
+        font-family: "beautyDream";
+        font-size: 40px;
+        color: #212121; }
+      .section3Container .section3OptionsContainer .section3OptionContainer .section3OptionDescription {
+        font-family: "loveloBlack";
+        font-size: 20px;
+        color: #ede9e3; }
+      .section3Container .section3OptionsContainer .section3OptionContainer .section3OptionButton {
+        margin-top: 30px;
+        padding: 10px 50px;
+        border-radius: 5px;
+        background-color: #ede9e3; }
+        .section3Container .section3OptionsContainer .section3OptionContainer .section3OptionButton:hover {
+          background-color: #fff;
+          cursor: pointer; }
+        .section3Container .section3OptionsContainer .section3OptionContainer .section3OptionButton .section3OptionButtonText {
+          font-family: "dosisRegular"; }
+
+.footerContainer {
+  display: flex;
+  background-color: #d4b2a7;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  justify-content: space-evenly;
+  align-items: center; }
+  .footerContainer .footerText {
+    font-family: "beautyDream";
+    font-size: 40px; }
+  .footerContainer .footerButtonContainer {
+    padding: 10px 50px;
+    border-radius: 5px;
+    background-color: #ede9e3; }
+    .footerContainer .footerButtonContainer:hover {
+      background-color: #fff;
+      cursor: pointer; }
+    .footerContainer .footerButtonContainer .footerButtonText {
+      font-family: "dosisRegular";
+      font-size: 18px; }
