--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,25 +1,26 @@
 .footerContainer{
   display: flex;
-  background-color: $paleDogwood;
+  background-color: $almond;
   padding-top: 40px;
   padding-bottom: 40px;
   justify-content: space-evenly;
   align-items: center;
   .footerText{
-    font-family: "beautyDream";
-    font-size: 40px;
+    font-family: "dosisRegular";
+    font-size: 25px;
   }
   .footerButtonContainer{
     padding: 10px 50px;
     border-radius: 5px;
-    background-color: $isabeline;
+    background-color: $cinereous;
     &:hover{
-      background-color: $light;
+      background-color: $paleDogwood;
       cursor: pointer;
     }
     .footerButtonText{
       font-family: "dosisRegular";
       font-size: 18px;
+      color: $light;
     }
   }
 }
