--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -1,6 +1,10 @@
 .section1Container{
+  background-color: $isabeline;
   .imageTitleContainer{
-    background-image: url("../src/images/consultingRoom.jpg");
+    position: relative;
+    z-index: 99;
+    background-image: url("../src/images/section1Background.jpg");
+    background-size: cover;
     height: 400px;
     display: flex;
     .titleContainer{
@@ -9,13 +13,15 @@
       right: 25%;
       display: flex;
       .homeTitle{
-        color: $paleDogwood;
+        color: $cinereous;
+        text-shadow: 1px -1px 0px rgba(0,0,0,1);
         font-size: 40px;
         font-family: "loveloBlack";
         padding-left: 15px;
       }
       .homeTitleBeauty{
         font-family: "beautyDream";
+        text-shadow: 1px -1px 0px rgba(0,0,0,1);
       }
     }
   }
@@ -25,26 +31,39 @@
     justify-content: space-between;
     padding-top: 50px;
     padding-bottom: 50px;
+    .imageSubtitleShadow{
+      z-index: 50;
+      top:-20px;
+      position: absolute;
+      background-color: $almond;
+      height: 500px;
+      width: 28%;
+      margin-left: 170px;
+      border-radius: 20px;
+    }
     .imageSubtitleContainer{
       z-index: 100;
-      top:-250px;
+      top:-220px;
       position: absolute;
-      background-image: url(../src/images/lookingAtMirror.jpg);
-      background-size: cover;
-      height: 700px;
-      width: 33%;
-      margin-left: 100px;
-      display: flex;
+      background-image: url(../src/images/section1Image.jpg);
+      background-size: contain;
+      height: 675px;
+      width: 28%;
+      margin-left: 140px;
+      border-radius: 20px;
       .ImageSubtitle{
         font-family: "beautyDream";
         font-size: 30px;
         margin-left: 50px;
         margin-top: 50px;
+        color: $cinereous;
+        text-shadow: 1px -1px 0px rgba(0,0,0,1);
       }
     }
   }
   .homeDescriptionContainer{
     width: 50%;
+    padding-right: 120px;
     .homeDescriptiontitleDecorative{
       font-family: "beautyDream";
       font-size: 40px;
