--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -1,10 +1,11 @@
 .section3Container{
+  background-color: $isabeline;
   padding: 30px 50px 70px 50px;
   .section3TitleContainer{
     margin: 40px 100px 60px 100px;
     .section3Title{
       font-family: "loveloBlack";
-      font-size: 18px;
+      font-size: 22px;
       text-align: center;
       margin-bottom: 15px;
     }
@@ -18,18 +19,19 @@
     justify-content: space-evenly;
     .section3OptionContainer{
       padding: 70px 100px;
-      background-color: $paleDogwood;
+      background-color: $cinereous;
       display: flex;
       flex-direction: column;
       align-items: center;
       .section3OptionTitle{
         font-family: "beautyDream";
-        font-size: 40px;
-        color: $dark;
+        font-size: 30px;
+        color: $light;
       }
       .section3OptionDescription{
         font-family: "loveloBlack";
-        font-size: 20px;
+        padding-top: 5px;
+        font-size: 16px;
         color: $isabeline;
       }
       .section3OptionButton{
