--- a/scss/_structure.scss
+++ b/scss/_structure.scss
@@ -5,7 +5,18 @@
 }
 
 html{
-    p, h1 , h2, h3 {
+    p, h1 , h2, h3, h4 {
         margin: 0;
     }
+    a{
+        text-decoration: none;
+        color: $dark;
+        &:hover{
+            color: $silver;
+        }
+    }
+}
+
+.homeContainer{
+    margin-top: 120px;
 }
