--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 .navBarContainer {
+  position: fixed;
+  top: 0;
+  width: 100%;
   padding-top: 30px;
   padding-bottom: 30px;
   display: flex;
-  justify-content: space-evenly; }
+  justify-content: space-evenly;
+  background-color: #e7d7c9;
+  z-index: 10000; }
   .navBarContainer .navBarLinksContainer {
     display: flex;
     justify-content: space-between;
@@ -13,85 +18,114 @@
       padding-right: 20px;
       padding-left: 20px; }
     .navBarContainer .navBarLinksContainer .linkSeparator {
-      border-right: 1px solid #212121; }
+      border-right: 2px solid #212121; }
   .navBarContainer .navBarTitleContainer {
     display: flex;
     flex-direction: column;
     align-items: center; }
+    .navBarContainer .navBarTitleContainer:hover {
+      color: #212121; }
     .navBarContainer .navBarTitleContainer .navBarTitle {
       margin: 0;
       font-family: LoveloBlack;
       font-size: 30px; }
     .navBarContainer .navBarTitleContainer .navBarSubTitle {
       margin: 0;
-      font-family: "beautyDream"; }
+      font-family: "beautyDream";
+      font-size: 17px; }
 
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box; }
 
-html p, html h1, html h2, html h3 {
+html p, html h1, html h2, html h3, html h4 {
   margin: 0; }
 
-.section1Container .imageTitleContainer {
-  background-image: url("../src/images/consultingRoom.jpg");
-  height: 400px;
-  display: flex; }
-  .section1Container .imageTitleContainer .titleContainer {
-    position: absolute;
-    top: 50%;
-    right: 25%;
-    display: flex; }
-    .section1Container .imageTitleContainer .titleContainer .homeTitle {
-      color: #d4b2a7;
-      font-size: 40px;
-      font-family: "loveloBlack";
-      padding-left: 15px; }
-    .section1Container .imageTitleContainer .titleContainer .homeTitleBeauty {
-      font-family: "beautyDream"; }
+html a {
+  text-decoration: none;
+  color: #212121; }
+  html a:hover {
+    color: #cdc6c3; }
 
-.section1Container .subtitleContainer {
-  display: flex;
-  position: relative;
-  justify-content: space-between;
-  padding-top: 50px;
-  padding-bottom: 50px; }
-  .section1Container .subtitleContainer .imageSubtitleContainer {
-    z-index: 100;
-    top: -250px;
-    position: absolute;
-    background-image: url(../src/images/lookingAtMirror.jpg);
+.homeContainer {
+  margin-top: 120px; }
+
+.section1Container {
+  background-color: #ede9e3; }
+  .section1Container .imageTitleContainer {
+    position: relative;
+    z-index: 99;
+    background-image: url("../src/images/section1Background.jpg");
     background-size: cover;
-    height: 700px;
-    width: 33%;
-    margin-left: 100px;
+    height: 400px;
     display: flex; }
-    .section1Container .subtitleContainer .imageSubtitleContainer .ImageSubtitle {
+    .section1Container .imageTitleContainer .titleContainer {
+      position: absolute;
+      top: 50%;
+      right: 25%;
+      display: flex; }
+      .section1Container .imageTitleContainer .titleContainer .homeTitle {
+        color: #a38f85;
+        text-shadow: 1px -1px 0px black;
+        font-size: 40px;
+        font-family: "loveloBlack";
+        padding-left: 15px; }
+      .section1Container .imageTitleContainer .titleContainer .homeTitleBeauty {
+        font-family: "beautyDream";
+        text-shadow: 1px -1px 0px black; }
+  .section1Container .subtitleContainer {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    padding-top: 50px;
+    padding-bottom: 50px; }
+    .section1Container .subtitleContainer .imageSubtitleShadow {
+      z-index: 50;
+      top: -20px;
+      position: absolute;
+      background-color: #e7d7c9;
+      height: 500px;
+      width: 28%;
+      margin-left: 170px;
+      border-radius: 20px; }
+    .section1Container .subtitleContainer .imageSubtitleContainer {
+      z-index: 100;
+      top: -220px;
+      position: absolute;
+      background-image: url(../src/images/section1Image.jpg);
+      background-size: contain;
+      height: 675px;
+      width: 28%;
+      margin-left: 140px;
+      border-radius: 20px; }
+      .section1Container .subtitleContainer .imageSubtitleContainer .ImageSubtitle {
+        font-family: "beautyDream";
+        font-size: 30px;
+        margin-left: 50px;
+        margin-top: 50px;
+        color: #a38f85;
+        text-shadow: 1px -1px 0px black; }
+  .section1Container .homeDescriptionContainer {
+    width: 50%;
+    padding-right: 120px; }
+    .section1Container .homeDescriptionContainer .homeDescriptiontitleDecorative {
       font-family: "beautyDream";
-      font-size: 30px;
-      margin-left: 50px;
-      margin-top: 50px; }
-
-.section1Container .homeDescriptionContainer {
-  width: 50%; }
-  .section1Container .homeDescriptionContainer .homeDescriptiontitleDecorative {
-    font-family: "beautyDream";
-    font-size: 40px;
-    padding-bottom: 20px; }
-  .section1Container .homeDescriptionContainer .homeDescriptionTitle {
-    font-family: "loveloBlack";
-    padding-bottom: 20px;
-    font-size: 30px; }
-  .section1Container .homeDescriptionContainer .homeDescriptionText {
-    font-family: "dosisRegular";
-    padding-bottom: 20px; }
+      font-size: 40px;
+      padding-bottom: 20px; }
+    .section1Container .homeDescriptionContainer .homeDescriptionTitle {
+      font-family: "loveloBlack";
+      padding-bottom: 20px;
+      font-size: 30px; }
+    .section1Container .homeDescriptionContainer .homeDescriptionText {
+      font-family: "dosisRegular";
+      padding-bottom: 20px; }
 
 .section2Container {
   padding: 20px;
   padding-left: 50px;
   padding-right: 50px;
-  background-color: #ede9e3; }
+  background-color: #fff; }
   .section2Container .section2TitleContainer {
     display: flex;
     justify-content: center;
@@ -110,18 +144,20 @@ html p, html h1, html h2, html h3 {
         margin-bottom: 20px;
         align-items: center; }
         .section2Container .section2DescriptionItemsContainer .section2DescriptionContainer .section2ItemContainer .section2Item {
-          font-size: 100px; }
+          font-size: 30px;
+          color: #d4b2a7; }
         .section2Container .section2DescriptionItemsContainer .section2DescriptionContainer .section2ItemContainer .section2Text {
           margin-left: 20px;
           font-family: "dosisRegular"; }
 
 .section3Container {
+  background-color: #ede9e3;
   padding: 30px 50px 70px 50px; }
   .section3Container .section3TitleContainer {
     margin: 40px 100px 60px 100px; }
     .section3Container .section3TitleContainer .section3Title {
       font-family: "loveloBlack";
-      font-size: 18px;
+      font-size: 22px;
       text-align: center;
       margin-bottom: 15px; }
     .section3Container .section3TitleContainer .section3SubTitle {
@@ -132,17 +168,18 @@ html p, html h1, html h2, html h3 {
     justify-content: space-evenly; }
     .section3Container .section3OptionsContainer .section3OptionContainer {
       padding: 70px 100px;
-      background-color: #d4b2a7;
+      background-color: #a38f85;
       display: flex;
       flex-direction: column;
       align-items: center; }
       .section3Container .section3OptionsContainer .section3OptionContainer .section3OptionTitle {
         font-family: "beautyDream";
-        font-size: 40px;
-        color: #212121; }
+        font-size: 30px;
+        color: #fff; }
       .section3Container .section3OptionsContainer .section3OptionContainer .section3OptionDescription {
         font-family: "loveloBlack";
-        font-size: 20px;
+        padding-top: 5px;
+        font-size: 16px;
         color: #ede9e3; }
       .section3Container .section3OptionsContainer .section3OptionContainer .section3OptionButton {
         margin-top: 30px;
@@ -157,21 +194,22 @@ html p, html h1, html h2, html h3 {
 
 .footerContainer {
   display: flex;
-  background-color: #d4b2a7;
+  background-color: #e7d7c9;
   padding-top: 40px;
   padding-bottom: 40px;
   justify-content: space-evenly;
   align-items: center; }
   .footerContainer .footerText {
-    font-family: "beautyDream";
-    font-size: 40px; }
+    font-family: "dosisRegular";
+    font-size: 25px; }
   .footerContainer .footerButtonContainer {
     padding: 10px 50px;
     border-radius: 5px;
-    background-color: #ede9e3; }
+    background-color: #a38f85; }
     .footerContainer .footerButtonContainer:hover {
-      background-color: #fff;
+      background-color: #d4b2a7;
       cursor: pointer; }
     .footerContainer .footerButtonContainer .footerButtonText {
       font-family: "dosisRegular";
-      font-size: 18px; }
+      font-size: 18px;
+      color: #fff; }
