[feature] - added section FrequentQuestions with accordion, modified navBar, footer, section1 & section3

--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -36,7 +36,7 @@
     }
     .navBarSubTitle{
       margin: 0;
-      font-family: "beautyDream";
+      font-family: "dosisRegular";
       font-size: 17px;
     }
   }
