--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -10,8 +10,21 @@
     .titleContainer{
       position: absolute;
       top: 50%;
-      right: 25%;
+      right: 10%;
       display: flex;
+      flex-direction: column;
+      align-items: center;
+      .section1Title{
+        font-family: "dosisRegular";
+        color: $almond;
+        font-size: 50px;
+      }
+      .section1Subtitle{
+        font-family: "beautyDream";
+        padding-top: 10px;
+        font-size: 30px;
+        color: $paleDogwood;
+      }
       .homeTitle{
         color: $cinereous;
         text-shadow: 1px -1px 0px rgba(0,0,0,1);
@@ -36,14 +49,14 @@
       top:-20px;
       position: absolute;
       background-color: $almond;
-      height: 500px;
+      height: 620px;
       width: 28%;
       margin-left: 170px;
       border-radius: 20px;
     }
     .imageSubtitleContainer{
       z-index: 100;
-      top:-220px;
+      top:-110px;
       position: absolute;
       background-image: url(../src/images/section1Image.jpg);
       background-size: contain;
@@ -71,8 +84,9 @@
     }
     .homeDescriptionTitle{
       font-family: "loveloBlack";
-      padding-bottom: 20px;
-      font-size: 30px;
+      padding-bottom: 25px;
+      padding-top: 10px;
+      font-size: 25px;
     }
     .homeDescriptionText{
       font-family: "dosisRegular";
