--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -17,14 +17,62 @@
   .section3OptionsContainer{
     display: flex;
     justify-content: space-evenly;
-    .section3OptionContainer{
-      padding: 70px 100px;
+    .section3OptionContainerMaida{
+      height: 603px;
+      border-radius: 10px;
+      padding: 50px 100px;
       background-color: $cinereous;
+      background-image: url("../src/images/Maida.jpeg");
+      background-size:contain;
+      opacity: .5;
       display: flex;
       flex-direction: column;
       align-items: center;
+      &:hover{
+        opacity: 1;
+      }
       .section3OptionTitle{
         font-family: "beautyDream";
+        padding-top: 420px;
+        font-size: 30px;
+        color: $light;
+      }
+      .section3OptionDescription{
+        font-family: "loveloBlack";
+        padding-top: 5px;
+        font-size: 16px;
+        color: $isabeline;
+      }
+      .section3OptionButton{
+        margin-top: 30px;
+        padding: 10px 50px;
+        border-radius: 5px;
+        background-color: $isabeline;
+        &:hover{
+          background-color: $light;
+          cursor: pointer;
+        }
+        .section3OptionButtonText{
+          font-family: "dosisRegular";
+        }
+      }
+    }
+    .section3OptionContainerCoke{
+      padding: 50px 100px;
+      background-color: $cinereous;
+      background-image: url("../src/images/Coke.jpeg");
+      border-radius: 10px;
+      background-size: contain;
+      opacity: .5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      &:hover{
+        opacity: 1;
+      }
+      .section3OptionTitle{
+        font-family: "beautyDream";
+        padding-top: 420px;
         font-size: 30px;
         color: $light;
       }
