[feature] added sidebar for contact an booking, form working, but date picker needs to return the date, added loading component

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,3 +7,11 @@
 @import "footer";
 @import "contact";
 @import "frequentQuestions";
+@import "sidebar";
+@import "loading";
+@import "booking";
+@import "inputDataTime";
+
+.main-content{
+  filter: blur(1px);
+}
