--- a/scss/_booking.scss
+++ b/scss/_booking.scss
@@ -1,15 +1,15 @@
-.contactContainer{
+.bookingContainer{
   display: flex;
   flex-direction: column;
   width: 70%;
-  .contactTitleContainer{
+  .bookingTitleContainer{
     position: relative;
     align-self: center;
-    width: 50%;
+    width: 85%;
     height: 40px;
     margin-bottom: 50px;
     background-color: $almond;
-    .contactTitle{
+    .bookingTitle{
       top: -25px;
       position: absolute;
       color: $dark;
@@ -17,7 +17,7 @@
       font-size: 45px;
     }
   }
-  .contactFormContainer{
+  .bookingFormContainer{
     form{
       display: flex;
       flex-direction: column;
