--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -17,6 +17,10 @@
       font-size: 20px;
       padding-right: 20px;
       padding-left: 20px;
+      cursor: pointer;
+      &:hover{
+        color: $paleDogwood;
+      }
     }
     .linkSeparator{
       border-right: 2px solid $dark;
@@ -40,4 +44,8 @@
       font-size: 17px;
     }
   }
+}
+
+.blur{
+  filter: blur(1px);
 }
