[feature] - booking container working good, date picker done

--- a/scss/_booking.scss
+++ b/scss/_booking.scss
@@ -47,5 +47,11 @@
         }
       }
     }
+    .bookingDescription{
+      padding-top: 15px;
+      text-align: center;
+      color: $light;
+      font-family: "dosisLight";
+    }
   }
 }
