--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -47,5 +47,11 @@
         }
       }
     }
+    .contactDescription{
+      padding-top: 15px;
+      text-align: center;
+      color: $light;
+      font-family: "dosisLight";
+    }
   }
 }
