--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,7 @@ html a {
       height: 36rem;
       border-radius: 10px;
       padding: 50px 100px;
-      background-image: url("../src/images/maida.jpeg");
+      background-image: url("../src/images/magda.jpeg");
       background-size: contain;
       display: flex;
       flex-direction: column;
