[fix] - error with coke image

--- a/src/App.css
+++ b/src/App.css
@@ -223,7 +223,7 @@ html a {
       width: 27rem;
       height: 36rem;
       padding: 50px 100px;
-      background-image: url("../src/images/coke.jpeg");
+      background-image: url("../src/images/jorge.jpeg");
       border-radius: 10px;
       background-size: contain;
       display: flex;
