--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -63,7 +63,7 @@
       width: 27rem;
       height: 36rem;
       padding: 50px 100px;
-      background-image: url("../src/images/coke.jpeg");
+      background-image: url("../src/images/jorge.jpeg");
       border-radius: 10px;
       background-size: contain;
       display: flex;
