--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -45,12 +45,12 @@
     .professionalDescriptionContainer{
       position: absolute;
       bottom: -100px;
-      background-color: rgba(163, 143, 133, 1);
+      background-color: rgba(163, 143, 133, .5);
       border-radius: 10px;
       .professionalName{
         font-family: "loveloBlack";
         padding: 5px 15px;
-        font-size: 25px;
+        font-size: 19px;
         color: $light;
       }
       .professionalDescription{
